--- a/calcBudget/css/style.css
+++ b/calcBudget/css/style.css
@@ -1,49 +1,78 @@
 .container {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    background-color: #282826;
+    color: white;
+    font-family: "Fira Sans", sans-serif;
+    width: 20rem;
+    height: 30rem;
 }
 
 .input-area {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+}
+
+.input-label {
+    display: flex;
+    justify-content: space-between;
+}
+
+.history {
+    margin-right: 1rem;
+}
+
+.inp {
+    text-align: right;
+    background-color: #282826;
+    color: white;
+    border: none;
+    outline:none;
 }
 
 .input-buttons {
     display: flex;
     flex-direction: row;
+    flex-grow: 10;
 }
 
 .nums {
     display: flex;
     flex-direction: column;
-
+    flex-grow: 1;
 }
 
-.nums:last-child {
+.row {
     display: flex;
-    flex-grow: 1;
+    flex: 1;
 }
 
 .btn-edits {
     display: flex;
+    flex-grow: 0.3;
     flex-direction: column;
 }
 
-.btn-enter {
-    align-items: stretch;
-}
-
 .btn-number {
-    width: 30px;
     border-color: black;
-    background-color: lightgray;
+    background-color: #efefef;
+    flex: 1;
 }
 
 .btn-back {
-    background-color: white;
+    background-color: lightgray;
+    flex-grow: 0.28;
 }
 
 .btn-enter {
     background-color: #f3c161;
+    flex-grow: 1;
+}
+
+.row.zero {
+    flex-grow: 1;
+}
+.row.comma {
+    flex-grow: 3;
 }
