--- a/calcBudget/public/style.css
+++ b/calcBudget/public/style.css
@@ -8,6 +8,12 @@
     height: 30rem;
 }
 
+.app-container {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
 .input-area {
     display: flex;
     flex-direction: column;
@@ -81,4 +87,28 @@
 a {
     text-decoration: none;
     color: inherit;
+}
+
+.record {
+    display: flex;
+    flex-direction: row;
+    margin-left: 0.5rem;
+}
+
+.record-info {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+}
+
+.money {
+    font-size: 3rem;
+}
+
+.day {
+    font-size: 1rem;
+}
+
+.btn-del {
+
 }
